[gd_scene load_steps=2 format=3 uid="uid://dinventory_ui01"]

[ext_resource type="Script" path="res://ui/inventory_ui/inventory_ui.gd" id="1_script"]

[node name="InventoryUI" type="Control"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="DimOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="MainPanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -155.0
offset_right = 240.0
offset_bottom = 155.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainMargin" type="MarginContainer" parent="MainPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 8

[node name="MainVBox" type="VBoxContainer" parent="MainPanel/MainMargin"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="TitleRow" type="HBoxContainer" parent="MainPanel/MainMargin/MainVBox"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MainPanel/MainMargin/MainVBox/TitleRow"]
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.75, 1.0, 1)
theme_override_font_sizes/font_size = 16
text = "INVENTORY"

[node name="Spacer" type="Control" parent="MainPanel/MainMargin/MainVBox/TitleRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="GoldLabel" type="Label" parent="MainPanel/MainMargin/MainVBox/TitleRow"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.75, 0.45, 1)
theme_override_font_sizes/font_size = 12
text = "Gold: 0"
horizontal_alignment = 2

[node name="CategoryRow" type="HBoxContainer" parent="MainPanel/MainMargin/MainVBox"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="AllCategoryBtn" type="Button" parent="MainPanel/MainMargin/MainVBox/CategoryRow"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "All"

[node name="ConsumablesCategoryBtn" type="Button" parent="MainPanel/MainMargin/MainVBox/CategoryRow"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Consumables"

[node name="EquipmentCategoryBtn" type="Button" parent="MainPanel/MainMargin/MainVBox/CategoryRow"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Equipment"

[node name="KeyItemsCategoryBtn" type="Button" parent="MainPanel/MainMargin/MainVBox/CategoryRow"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Key Items"

[node name="ContentHBox" type="HBoxContainer" parent="MainPanel/MainMargin/MainVBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="ItemListPanel" type="PanelContainer" parent="MainPanel/MainMargin/MainVBox/ContentHBox"]
layout_mode = 2
custom_minimum_size = Vector2(170, 0)

[node name="ItemScroll" type="ScrollContainer" parent="MainPanel/MainMargin/MainVBox/ContentHBox/ItemListPanel"]
unique_name_in_owner = true
layout_mode = 2

[node name="ItemListVBox" type="VBoxContainer" parent="MainPanel/MainMargin/MainVBox/ContentHBox/ItemListPanel/ItemScroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 2

[node name="DetailPanel" type="PanelContainer" parent="MainPanel/MainMargin/MainVBox/ContentHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="DetailMargin" type="MarginContainer" parent="MainPanel/MainMargin/MainVBox/ContentHBox/DetailPanel"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 6

[node name="DetailVBox" type="VBoxContainer" parent="MainPanel/MainMargin/MainVBox/ContentHBox/DetailPanel/DetailMargin"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="ItemNameLabel" type="Label" parent="MainPanel/MainMargin/MainVBox/ContentHBox/DetailPanel/DetailMargin/DetailVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.75, 1.0, 1)
theme_override_font_sizes/font_size = 13
text = "Select an item"

[node name="DetailSeparator" type="HSeparator" parent="MainPanel/MainMargin/MainVBox/ContentHBox/DetailPanel/DetailMargin/DetailVBox"]
layout_mode = 2

[node name="ItemDescLabel" type="Label" parent="MainPanel/MainMargin/MainVBox/ContentHBox/DetailPanel/DetailMargin/DetailVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.55, 0.7, 1)
theme_override_font_sizes/font_size = 10
autowrap_mode = 2

[node name="StatsVBox" type="VBoxContainer" parent="MainPanel/MainMargin/MainVBox/ContentHBox/DetailPanel/DetailMargin/DetailVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 2

[node name="DetailSpacer" type="Control" parent="MainPanel/MainMargin/MainVBox/ContentHBox/DetailPanel/DetailMargin/DetailVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="ActionHBox" type="HBoxContainer" parent="MainPanel/MainMargin/MainVBox/ContentHBox/DetailPanel/DetailMargin/DetailVBox"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="UseButton" type="Button" parent="MainPanel/MainMargin/MainVBox/ContentHBox/DetailPanel/DetailMargin/DetailVBox/ActionHBox"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "Use"

[node name="EquipButton" type="Button" parent="MainPanel/MainMargin/MainVBox/ContentHBox/DetailPanel/DetailMargin/DetailVBox/ActionHBox"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "Equip"

[node name="CharSelectPanel" type="PanelContainer" parent="MainPanel/MainMargin/MainVBox"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="CharSelectMargin" type="MarginContainer" parent="MainPanel/MainMargin/MainVBox/CharSelectPanel"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 4

[node name="CharSelectVBox" type="VBoxContainer" parent="MainPanel/MainMargin/MainVBox/CharSelectPanel/CharSelectMargin"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 2

[node name="CloseHint" type="Label" parent="MainPanel/MainMargin/MainVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.35, 0.5, 1)
theme_override_font_sizes/font_size = 9
text = "Cancel: Close"
horizontal_alignment = 2
